config for deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,13 @@
 spring.application.name=annulation_reservation_voyage
 
 #Configuration de connection la base de donnée
-spring.cassandra.keyspace-name=reservation_annulation
-spring.cassandra.contact-points=172.17.0.2
-spring.cassandra.port=9042
-spring.cassandra.local-datacenter=datacenter1
+spring.data.cassandra.keyspace-name=reservation_annulation
+spring.data.cassandra.contact-points=database-service
+spring.data.cassandra.port=9042
+spring.data.cassandra.local-datacenter=datacenter
 #spring.cassandra.username=root
 #spring.cassandra.password=azerty
 
 spring.main.allow-bean-definition-overriding=true
-
 spring.cassandra.schema-action=CREATE_IF_NOT_EXISTS
-
 server.servlet.context-path=/api
