--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=annulation_reservation_voyage
 
 #Configuration de connection la base de donnée
-spring.data.cassandra.keyspace-name=reservation_annulation
-spring.data.cassandra.contact-points=database-service
-spring.data.cassandra.port=9042
-spring.data.cassandra.local-datacenter=datacenter
+spring.cassandra.keyspace-name=database-service
+spring.cassandra.contact-points=localhost
+spring.cassandra.port=9042
+spring.cassandra.local-datacenter=datacenter1
 #spring.cassandra.username=root
 #spring.cassandra.password=azerty
 
