--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "constate": "^3.3.2",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "react": "^18.2.0",
