--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=annulation_reservation_voyage
-
+server.port=8085
 #Configuration de connection la base de donnée
-spring.cassandra.keyspace-name=annulation_reservation3
+spring.cassandra.keyspace-name=reservation_annulation
 spring.cassandra.contact-points=localhost
 spring.cassandra.port=9042
 spring.cassandra.local-datacenter=datacenter1
