--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.23.0",
     "axios": "^1.7.9",
     "constate": "^3.3.2",
+    "html2pdf.js": "^0.10.2",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "prop-types": "^15.8.1",
