--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,13 @@
 			<artifactId>javax.annotation-api</artifactId>
 			<version>1.3.2</version>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>javax</groupId>
+     <artifactId>javaee-api</artifactId>
+     <version>8.0.1</version>
+   </dependency>
+  </dependencies>
 
 	<build>
 		<plugins>
