--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
      <artifactId>javaee-api</artifactId>
      <version>8.0.1</version>
    </dependency>
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>1.0.2</version>
+		</dependency>
   </dependencies>
 
 	<build>
