--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.cassandra.connection.connect-timeout=5000
 spring.main.allow-bean-definition-overriding=true
 spring.cassandra.schema-action=CREATE_IF_NOT_EXISTS
 server.servlet.context-path=/api
+
+#Clé Paiement
+payment.apiKey=ciOlTqLF7vUBv8jfTh9RfOLCKLiLngTw
+payment.secretKey=GNqTDwTVmW9WXXFqJSd_IYbISWMy3mrMULxeu3fEz80sVWGGMeb4iZlfNI2quRYH
