--- a/compose.yml
+++ b/compose.yml
@@ -1,18 +1,18 @@
 version: "3.9"
 services:
-  database-service:
-    container_name: database-service
-    image: scylladb/scylla
-    restart: always
-    ports:
-      - "9042:9042"
-    #    environment:
-    #      CASSANDRA_CLUSTER_NAME: "ReservationCluster"
-    #      CASSANDRA_DC: "datacenter1"
-    #      CASSANDRA_RACK: "rack1"
-    #      CASSANDRA_NUM_TOKENS: "256"
-    networks:
-      - annulation-reservation
+  #  database-service:
+  #    container_name: database-service
+  #    image: scylladb/scylla
+  #    restart: always
+  #    ports:
+  #      - "9042:9042"
+  #    environment:
+  #      CASSANDRA_CLUSTER_NAME: "ReservationCluster"
+  #      CASSANDRA_DC: "datacenter1"
+  #      CASSANDRA_RACK: "rack1"
+  #      CASSANDRA_NUM_TOKENS: "256"
+  #    networks:
+  #      - annulation-reservation
 
   voyage-service:
     container_name: voyage-service
@@ -26,9 +26,8 @@ services:
     environment:
       DB_HOST: database-service
       DB_PORT: 9042
-    networks:
-      - annulation-reservation
-
-networks:
-  annulation-reservation:
-    driver: bridge
+  #   networks:
+  #     - annulation-reservation
+#networks:
+# annulation-reservation:
+#   driver: bridge
